# qt-opencascade-experiment

./: CMakeLists.txt  MakeBottle.h  README.md
src/: CameraController.cpp  CameraController.hpp  Component.cpp  Component.hpp  Default.frag  Default.vert  Edge.frag  Edge.vert  Entity.cpp  Entity.hpp  Face.vert  LineMesh.cpp  LineMesh.hpp  MakeBottle.cpp  MakeBottle.hpp  Mesh.cpp  Mesh.h  Mesh.hpp  RenderView.cpp  RenderView.h  RenderView.hpp  Shader.cpp  Shader.h  Shader.hpp  Shape.cpp  Shape.hpp  main.cpp  resources.qrc
